// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Film renders correctly When user is authorized 1`] = `
<React.Fragment>
  <section
    className="movie-card movie-card--full"
    style={
      Object {
        "backgroundColor": "#B9B27E",
      }
    }
  >
    <div
      className="movie-card__hero"
    >
      <div
        className="movie-card__bg"
      >
        <img
          alt="Matrix"
          src="https://assets.htmlacademy.ru/intensives/javascript-3/film/background/matrix.jpg"
        />
      </div>
      <h1
        className="visually-hidden"
      >
        WTW
      </h1>
      <Memo(Connect(Header))
        className="movie-card__head"
      />
      <div
        className="movie-card__wrap"
      >
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
          >
            Matrix
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Action
            </span>
            <span
              className="movie-card__year"
            >
              1999
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <button
              className="btn btn--play movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </button>
            <Memo(Connect(FavoriteButton))
              id={4}
              isFavorite={false}
            />
            <Link
              className="btn movie-card__button"
              to="undefined/review"
            >
              Add review
            </Link>
          </div>
        </div>
      </div>
    </div>
    <div
      className="movie-card__wrap movie-card__translate-top"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster movie-card__poster--big"
        >
          <img
            alt="Matrix"
            height="327"
            src="https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/matrix.jpg"
            width="218"
          />
        </div>
        <ActiveTab
          film={
            Object {
              "background": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/matrix.jpg",
              "backgroundColor": "#B9B27E",
              "description": "A computer hacker learns from mysterious rebels about the true nature of his reality and his role in the war against its controllers.",
              "director": "Wachowski Brothers",
              "frame": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/matrix.jpg",
              "genre": "Action",
              "id": 4,
              "isFavorite": false,
              "poster": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/matrix.jpg",
              "previewVideoLink": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": 4.4,
              "ratingText": "Normal",
              "ratings": "1503092",
              "runtime": 136,
              "starring": Array [
                "Keanu Reeves",
                "Laurence Fishburne",
                "Carrie-Anne Moss",
              ],
              "title": "Matrix",
              "video": "http://media.xiph.org/mango/tears_of_steel_1080p.webm",
              "year": "1999",
            }
          }
        />
      </div>
    </div>
  </section>
  <div
    className="page-content"
  >
    <Memo(Connect(LikeThis))
      genre="Action"
      id={4}
    />
    <Footer />
  </div>
</React.Fragment>
`;

exports[`Film renders correctly When user not authorized 1`] = `
<React.Fragment>
  <section
    className="movie-card movie-card--full"
    style={
      Object {
        "backgroundColor": "#B9B27E",
      }
    }
  >
    <div
      className="movie-card__hero"
    >
      <div
        className="movie-card__bg"
      >
        <img
          alt="Matrix"
          src="https://assets.htmlacademy.ru/intensives/javascript-3/film/background/matrix.jpg"
        />
      </div>
      <h1
        className="visually-hidden"
      >
        WTW
      </h1>
      <Memo(Connect(Header))
        className="movie-card__head"
      />
      <div
        className="movie-card__wrap"
      >
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
          >
            Matrix
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Action
            </span>
            <span
              className="movie-card__year"
            >
              1999
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <button
              className="btn btn--play movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </button>
            <Memo(Connect(FavoriteButton))
              id={4}
              isFavorite={false}
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="movie-card__wrap movie-card__translate-top"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster movie-card__poster--big"
        >
          <img
            alt="Matrix"
            height="327"
            src="https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/matrix.jpg"
            width="218"
          />
        </div>
        <ActiveTab
          film={
            Object {
              "background": "https://assets.htmlacademy.ru/intensives/javascript-3/film/background/matrix.jpg",
              "backgroundColor": "#B9B27E",
              "description": "A computer hacker learns from mysterious rebels about the true nature of his reality and his role in the war against its controllers.",
              "director": "Wachowski Brothers",
              "frame": "https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/matrix.jpg",
              "genre": "Action",
              "id": 4,
              "isFavorite": false,
              "poster": "https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/matrix.jpg",
              "previewVideoLink": "https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm",
              "rating": 4.4,
              "ratingText": "Normal",
              "ratings": "1503092",
              "runtime": 136,
              "starring": Array [
                "Keanu Reeves",
                "Laurence Fishburne",
                "Carrie-Anne Moss",
              ],
              "title": "Matrix",
              "video": "http://media.xiph.org/mango/tears_of_steel_1080p.webm",
              "year": "1999",
            }
          }
        />
      </div>
    </div>
  </section>
  <div
    className="page-content"
  >
    <Memo(Connect(LikeThis))
      genre="Action"
      id={4}
    />
    <Footer />
  </div>
</React.Fragment>
`;
